Fix footer css overlaping issue.

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -239,7 +239,8 @@ img { max-width: 100%; height: auto; }
 
 /** FOOTER
 ---------------------------------------- **/
-.footer { text-align: right; padding: 5em 0 2em;
+.footer { text-align: right; padding: 4em 0 2em;
+	.wrapper { padding-top: 0; }
 	a { margin: 0 0.2em; display: inline-block; padding: 1; .font-size(1.4);  }
 	/* type */
 	// color: @grey;
